--- a/docs/main.tex
+++ b/docs/main.tex
@@ -426,35 +426,9 @@ Transmission occurs by exposure to specific bodily fluids of an infected person.
 The most common mode of transmission is via unprotected anal or vaginal sex, though transmission can also occur from a mother to her baby, or when drug injection equipment is shared.
 Approximately 86 million people have become infected with HIV, and of those 40 million have died of AIDS-related causes.
 
-A major international effort has been made to address the epidemic, including by national governments, civil society organisations, pharmaceutical companies, research institutions, international agencies such as the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such as the President's Emergency Plan for AIDS Relief (PEPFAR; \$85 billion invested) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM; \$29 billion invested).
-A number of interventions have had a substantial impact on the course of the epidemic.
-These include:
-
-\begin{itemize}
-\tightlist
-\item
-  Antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
-  By taking ART daily, a person living with HIV can live a full and healthy life.
-  Of the 39 million people living with HIV (PLHIV) in 2022, around 76\% were accessing ART.
-  ART is estimated to have averted 16.5 million AIDS-related deaths.
-  Further, ART reduces the amount of virus in the blood and genital secretions.
-  If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually \autocite{cohen2011prevention}.
-  For this reason, as well as saving lives, treatment also operates as prevention (TaSP).
-\item
-  Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as \emph{Chlamydia trachomatis}, \emph{Neisseria gonorroeae}, syphilis, and \emph{Trichomonas vaginalis}.
-  There has been a significant scale-up of condom usage since 1990, which is estimated to have averted 117 million new HIV infections \autocite{stover2021impact}.
-  Even so, there remain significant and difficult to close gaps in the proportion of individuals reporting they used a condom during their last high-risk sexual encounter.
-\item
-  Voluntary medical male circumcision (VMMC) has been found to provide partial protection against female-to-male HIV transmission.
-  Complete surgical removal of the foreskin has been found to result in a reduction of HIV incidence in men by 50-60\% \autocite{auvert2005randomized,gray2007male,bailey2007male}.
-  Based on this evidence, since 2007 VMMC has been recommended by WHO and UNAIDS as a key HIV intervention in high-prevalence settings.
-  Scale up of VMMC across 15 priority countries between 2008 and 2019 was estimated to have already averted 340 thousand new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
-\item
-  Prevention of mother-to-child transmission
-\item
-  Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
-  They are primarily useful in high risk settings.
-\end{itemize}
+A global and multifaceted effort has been made to respond to the epidemic.
+Many groups have played pivotal roles in shaping the response, including local communities, civil society organisations, governments, research institutions, pharmaceutical companies, international agencies like the Joint United Nations Programme on HIV/AIDS (UNAIDS), and global health initiatives such like the President's Emergency Plan for AIDS Relief (PEPFAR) and the Global Fund to Fight AIDS, Tuberculosis, and Malaria (GFATM).
+Over \$100 billion has been invested by PEPFAR alone, constituting the ``largest commitment by a single nation to address a single disease in history'' \autocite{pepfar2022}.
 
 \begin{figure}
 
@@ -465,9 +439,37 @@ These include:
 \caption{Globally, yearly new HIV infections peaked in 1995, and have since decreased by 59\% and yearly AIDS-related deaths peaked in 2004, and have since decreased by 68\%. Much of the disease burden is concentrated in eastern and southern Africa, as well as western and central Africa. These two regions combined comprise sub-Saharan Africa.}\label{fig:overall-picture}
 \end{figure}
 
-The interventions above have had a significant impact on the course of the epidemic.
-Both the number of new HIV infections and number of AIDS-related deaths per year have fallen significantly since their peak (Figure \ref{fig:overall-picture}).
-That said, there remains quite some distance to go in ending AIDS as a public health threat.
+This combined effort has made a substantial impact on the course of the epidemic.
+Since their peak, the number of new HIV infections and AIDS-related deaths per year have both fallen significantly (Figure \ref{fig:overall-picture}).
+This success has been due to a number of HIV prevention and treatment options.
+
+\begin{itemize}
+\tightlist
+\item
+  Perhaps the most important HIV intervention, antiretroviral therapy (ART) is a drug which stops the virus from replicating in the body.
+  A person living with HIV who takes ART daily can live a full and healthy life.
+  Of the 39 million people living with HIV (PLHIV) in 2022, around 76\% were accessing ART.
+  A staggering 16.5 million AIDS-related deaths are estimated to have been averted by ART.
+  ART reduces the amount of virus in the blood and genital secretions.
+  If the virus is undetectable then there is considerable evidence that it cannot be transmitted sexually \autocite{cohen2011prevention}.
+  For this reason, as well as providing life saving treatment, ART also operates as prevention (TaSP).
+  Particular efforts have been made to provide pregnant women with ART, which is estimated to reduce the chance of mother-to-child transmission (MTCT) by 25-35\% in some settings \autocite{siegfried2011antiretrovirals}.
+\item
+  Condoms are an inexpensive and effective method for prevention of HIV and other sexually transmitted infections (STIs) such as \emph{Chlamydia trachomatis}, \emph{Neisseria gonorroeae}, syphilis, and \emph{Trichomonas vaginalis}.
+  There has been a significant scale-up of condom usage since 1990, which is estimated to have averted 117 million new HIV infections \autocite{stover2021impact}.
+  Even so, there remain significant and difficult to close gaps in the proportion of individuals reporting they used a condom during their last high-risk sexual encounter.
+\item
+  Voluntary medical male circumcision (VMMC) has been found to provide partial protection against female-to-male HIV transmission.
+  Three landmark randomised control trials \autocite{auvert2005randomized,gray2007male,bailey2007male} found complete surgical removal of the foreskin to result in a 50-60\% reduction of HIV incidence in men.
+  Based on this evidence, VMMC has been recommended by WHO and UNAIDS as a key HIV intervention in high-prevalence settings since 2007.
+  Scale up of VMMC across 15 priority countries between 2008 and 2019 was estimated to have already averted 340 thousand new HIV infections, though the future number of new HIV infections averted is likely to be much higher.
+\item
+  Pre-exposure prophylaxis (PrEP) and post-exposure prophylaxis (PEP) are drugs which can be taken before and after exposure to prevent transmission.
+  They are primarily useful in high risk settings.
+\end{itemize}
+
+It is important that progress is sustained.
+There remains some distance to go in ending AIDS as a public health threat.
 In 2022 there were 1.3 million people newly infected with HIV and 630 thousand AIDS-related deaths \autocite{unaids2022global}.
 
 \begin{figure}
@@ -479,14 +481,14 @@ In 2022 there were 1.3 million people newly infected with HIV and 630 thousand A
 \caption{Adult (15-49) HIV prevalence varies substantially both within and between countries in SSA. These 2023 estimates were generated by country teams using the Naomi small-area estimation model in a process supported by UNAIDS and are available from \texttt{aidsinfo.unaids.org}. White filled points are country-level estimates, and coloured points are district-level estimates. Results from Nigeria are yet to be approved and have been redacted. The estimates process in the Cabo Delgado province of Mozambique was disrupted by conflict. Obtaining results Democratic Republic of the Congo required removing some districts from the model. Country names are given by three-leter codes as published by the International Organization for Standardization (ISO).}\label{fig:naomi-continent}
 \end{figure}
 
-There is substantial geographic variation in disease burden, across multiple spatial scales.
+Disease burden varies substantially across multiple spatial scales.
 In some countries, the epidemic is concentrated within small populations, and HIV prevalence is low.
 In others, transmission is sustained in the general population, and HIV prevalence is higher.
-Most countries severely affected by HIV are in sub-Saharan Africa (SSA).
+Most of the countries severely affected by HIV are in sub-Saharan Africa (SSA).
 It is estimated that 66\% of the 39 million PLHIV worldwide live in SSA.
-For some countries in southern Africa, adult HIV prevalence (ages 15-49) is as high as 10\% or more (Figure \ref{fig:naomi-continent}).
-As well as variation at between countries, there is significant variation within countries at the district-level.
-For example, adult HIV prevalence in South Africa ranges from \texttt{r}7\texttt{\%\ to}r \texttt{32}\%.
+Adult HIV prevalence (ages 15-49) is higher than 10\% (Figure \ref{fig:naomi-continent}) in some countries in southern Africa.
+Just as there is variation between countries, there is variation within countries.
+For example, adult HIV prevalenceat the district municipality level in South Africa ranges from 6\% in Namakwa to 30\% in uMkhanyakude.
 
 In all countries, some groups of people are at much higher risk than others.
 Groups of people at increased risk of HIV infection are known as key populations (KPs).
@@ -497,18 +499,14 @@ In generalised settings like SSA, risk is more diffuse accross the population.
 For example, adolescent girls and young women (AGYW) are a large demographic group at increased risk of HIV infection in SSA \autocite{risher2021age,monod2023growing}.
 
 For available resources to have the greatest impact, it is important that HIV interventions are prioritised \autocite{ord2013moral}.
-The precision public health paradigm \autocite{khoury2016precision} looks to provide the right intervention, to the right population, in the right place, at the right time.
+The precision public health paradigm \autocite{khoury2016precision} is an extension of precision medicine to public health, which looks to ensure the right interventions are provided to the right populations, in the right places, at the right times.
 
 \hypertarget{hiv-surveillance}{%
 \section{\texorpdfstring{HIV surveillance \label{sec:surveillance}}{HIV surveillance }}\label{hiv-surveillance}}
 
 HIV surveillance refers to the collection, analysis, interpretation and dissemination of data relating to HIV/AIDS.
 Surveillance can used to track epidemic indicators, identify at-risk populations, find drivers of transmission, and evaluate the impact of prevention and treatment programs.
-
-\hypertarget{hiv-indicators}{%
-\subsection{HIV indicators}\label{hiv-indicators}}
-
-Central indicators include:
+Important indicators include:
 
 \begin{itemize}
 \tightlist
@@ -528,10 +526,8 @@ Central indicators include:
   Estimates of ART coverage play a direct role in the provision of treatment services.
 \end{itemize}
 
-\hypertarget{challenges}{%
-\subsection{Challenges}\label{challenges}}
-
 There are significant difficulties associated with obtaining reliable, timely, estimates of these indicators at an appropriate resolution.
+Among them:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -556,9 +552,6 @@ There are significant difficulties associated with obtaining reliable, timely, e
   For example, ART coverage has PLHIV as the denominator, which itself has the population size as its denominator.
 \end{enumerate}
 
-\hypertarget{statistical-methods}{%
-\subsection{Statistical methods}\label{statistical-methods}}
-
 The above challenges make direct interpretation of data misleading, and foreground the importance of careful statistical modelling.
 
 \begin{enumerate}
@@ -574,9 +567,6 @@ The above challenges make direct interpretation of data misleading, and foregrou
   \textbf{Expert guidance}
   Expert epidemiological, demographic opinion can be used to improve estimates.
 \end{enumerate}
-
-\hypertarget{future-trends}{%
-\subsection{Future trends}\label{future-trends}}
 
 Aims for HIV response going forward, and surveillance capabilities are needed to meet them.
 
