--- a/references.bib
+++ b/references.bib
@@ -1130,3 +1130,20 @@ URL= {https://www.r-inla.org/faq},
   institution={World Health Organization}
 }
 
+@misc{pepfar2022,
+  title = {{Latest Global Program Results}},
+  author = {{U.S. Department of State}},
+  howpublished = {\url{https://www.state.gov/wp-content/uploads/2022/11/PEPFAR-Latest-Global-Results_December-2022.pdf}},
+  year = {2022},
+  note = {Accessed: 10/08/2023},
+}
+
+@article{siegfried2011antiretrovirals,
+  title={Antiretrovirals for reducing the risk of mother-to-child transmission of HIV infection},
+  author={Siegfried, Nandi and van der Merwe, Lize and Brocklehurst, Peter and Sint, Tin Tin},
+  journal={Cochrane database of systematic reviews},
+  number={7},
+  year={2011},
+  publisher={John Wiley \& Sons, Ltd}
+}
+
