Fixes for figure path names

--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 <!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
 
 ```{r gbd, fig.cap="HIV/AIDS is the largest cause of DALYs for non-infacts (>1 years) in SSA. One DALY represents the loss of the equivalent of one year of full health, and is calculated by the sum of years of life lost and years lost due to disability. The disability weights used in the 2019 Global Burden of Disease study vary depending on severity of the condition. "}
-knitr::include_graphics("figures/gbd.png")
+knitr::include_graphics("figures/introduction/gbd.png")
 ```
 
 ```{r}
@@ -102,5 +102,5 @@ Further, I open the door to a new class of fast, flexible, and accurate Bayesian
 * Chapter \@ref(conclusions): Finally, I discuss avenues for future work, and my conclusions regarding the research, as well as its strengths and weaknesses.
 
 ```{r chapter-flowchart, fig.cap="The chapters in this thesis are structured to depend on each other. The dashed line represents a recommended, but not required dependency. Though chronological order is recommended, Chapter 4, Chapter 5 and Chapter 6 may be read in any order as, for the most part, they correspond to separable research projects."}
-knitr::include_graphics("figures/chapter-flowchart.pdf")
+knitr::include_graphics("figures/introduction/chapter-flowchart.pdf")
 ```
