--- a/03-bayesian.Rmd
+++ b/03-bayesian.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(
 ## Bayesian statistics
 
 Bayesian statistics is a mathematical paradigm for learning from data.
-It is well suited for attending to the challenges in Section \ref{sec:surveillance} because it allows principled, flexible incorporation of scientific knowledge.
+It is well suited for to the challenges posed in Section \ref{sec:surveillance} because it allows principled and flexible integration of data and scientific knowledge.
 In this section I provide brief overview.
 For a more complete introduction, I recommend @mcelreath2020statistical or @gelman2013bayesian.
 
@@ -55,7 +55,7 @@ The prior distribution encapsulates beliefs about the parameters $\bphi$ before 
 
 Recommendations for specifying the prior distribution vary.
 A central issue is the extent to which subjective information should be incorporated into the prior distribution, and thereby influence the posterior distribution.
-Proponents of the objective Bayesian paradigm suggest that the prior distribution should be non-informative.
+Proponents of the objective Bayesian paradigm suggest that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
 That said, we shall see that the distinction between likelihood and prior distribution can be blurred (Section \@ref(hierarchical-lgm-elgm)).
 As such, it may be argued that issues of subjectivity are not unique to the prior distribution, and ultimately the challenge of specifying the data generating process is better thought of more holistically [@gelman2017prior].
 
@@ -104,7 +104,7 @@ This law extends not only to space but also time.
 ### Hierarchical models {#hierarchical}
 
 ```{r hierarchical-structure, fig.cap="Data often has a hierarchical structure."}
-knitr::include_graphics("figures/hierarchical-structure.pdf")
+knitr::include_graphics("figures/bayesian/hierarchical-structure.pdf")
 ```
 
 Real world data usually has hierarchical structure.
