--- a/05-multi-agyw.Rmd
+++ b/05-multi-agyw.Rmd
@@ -61,7 +61,7 @@ The strategy encourages programmes to define targets for the proportion of AGYW 
 To implement the strategy, estimates of the size of each risk group are required.
 
 ```{r risk-grid, fig.cap="Risk depends on both individual-level risk behaviour and population-level HIV incidence."}
-knitr::include_graphics("figures/risk-grid.png")
+knitr::include_graphics("figures/multi-agyw/risk-grid.png")
 ```
 
 ## Data
@@ -80,7 +80,7 @@ Non-regular partners are defined to be non-cohabiting.
 The transactional sex risk group is adjusted during analysis to correspond to female sex worker, and incidence rate ratios among FSW were derived based on patterns of relative HIV prevalence among FSW compared to general population prevalence.
 When the local HIV incidence in the general population is higher, the incidence rate ratio for FSW is lower.
 
-```{r available-surveys, out.width = "90%", echo=FALSE, fig.cap="Surveys."}
+```{r available-surveys, fig.cap="Surveys."}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/available-surveys.png"))
 ```
 
@@ -300,7 +300,7 @@ Next, I used the assumed $\text{Gamma}(\alpha = 10.4, \beta = 0.36)$ FSW age dis
 I assumed these ratios in South Africa were applicable to every country, allowing calculation of the number of FSW by age group in all 13 countries.
 The results obtained are shown in Figure \@ref(fig:age-disagg-fsw-line).
 
-```{r age-disagg-fsw-line, out.width = "90%", echo=FALSE, fig.cap="The disaggregation procedure I used produces a plausible age distirbution of FSW by country."}
+```{r age-disagg-fsw-line, fig.cap="The disaggregation procedure I used produces a plausible age distirbution of FSW by country."}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/age-disagg-fsw-line.png"))
 ```
 
@@ -317,7 +317,7 @@ These empirical coverages can be compared to the nominal coverage $(1 - \alpha)$
 This approach has the advantage of considering all possible confidence values at once.
 @sailynoja2021graphical develop binomial distribution-based simultaneous confidence bands for ECDF difference values which test uniformity.
 
-```{r coverage, out.width = "90%", echo=FALSE, fig.cap="Coverage."}
+```{r coverage, fig.cap="Coverage."}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/coverage.png"))
 ```
 
@@ -325,11 +325,11 @@ knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depe
 
 #### Estimates
 
-```{r 3p1-continental-map, out.width = "90%", echo=FALSE, fig.cap="Map."}
+```{r 3p1-continental-map, fig.cap="Map."}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/3p1-continental-map.png"))
 ```
 
-```{r 3p1-within-between-country-variation, out.width = "90%", echo=FALSE, fig.cap="Dots."}
+```{r 3p1-within-between-country-variation, fig.cap="Dots."}
 knitr::include_graphics(paste0("resources/multi-agyw/", resource_version, "/depends/3p1-within-between-country-variation.png"))
 ```
 
