--- a/docs/main.tex
+++ b/docs/main.tex
@@ -345,7 +345,7 @@ Together, the contributions in this thesis help to guide precision HIV policy in
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/gbd} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/introduction/gbd} 
 
 }
 
@@ -399,7 +399,7 @@ The structure of this thesis (Figure \ref{fig:chapter-flowchart}) is as follows:
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/chapter-flowchart} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/introduction/chapter-flowchart} 
 
 }
 
@@ -432,7 +432,7 @@ Over \$100 billion has been invested by PEPFAR alone, constituting the ``largest
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/overall-picture} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/hiv-aids/overall-picture} 
 
 }
 
@@ -474,7 +474,7 @@ In 2022 there were 1.3 million people newly infected with HIV and 630 thousand A
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/naomi-continent} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/hiv-aids/naomi-continent} 
 
 }
 
@@ -591,7 +591,7 @@ Aims for HIV response going forward, and surveillance capabilities are needed to
 \section{Bayesian statistics}\label{bayesian-statistics}}
 
 Bayesian statistics is a mathematical paradigm for learning from data.
-It is well suited for attending to the challenges in Section \ref{sec:surveillance} because it allows principled, flexible incorporation of scientific knowledge.
+It is well suited for to the challenges posed in Section \ref{sec:surveillance} because it allows principled and flexible integration of data and scientific knowledge.
 In this section I provide brief overview.
 For a more complete introduction, I recommend \textcite{mcelreath2020statistical} or \textcite{gelman2013bayesian}.
 
@@ -613,7 +613,7 @@ The prior distribution encapsulates beliefs about the parameters \(\bphi\) befor
 
 Recommendations for specifying the prior distribution vary.
 A central issue is the extent to which subjective information should be incorporated into the prior distribution, and thereby influence the posterior distribution.
-Proponents of the objective Bayesian paradigm suggest that the prior distribution should be non-informative.
+Proponents of the objective Bayesian paradigm suggest that the prior distribution should be non-informative, so as not to introduce subjectivity into the analysis.
 That said, we shall see that the distinction between likelihood and prior distribution can be blurred (Section \ref{hierarchical-lgm-elgm}).
 As such, it may be argued that issues of subjectivity are not unique to the prior distribution, and ultimately the challenge of specifying the data generating process is better thought of more holistically \autocite{gelman2017prior}.
 
@@ -674,7 +674,7 @@ This law extends not only to space but also time.
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/hierarchical-structure} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/bayesian/hierarchical-structure} 
 
 }
 
@@ -881,7 +881,7 @@ To implement the strategy, estimates of the size of each risk group are required
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.95\linewidth]{figures/risk-grid} 
+{\centering \includegraphics[width=0.95\linewidth]{figures/multi-agyw/risk-grid} 
 
 }
 
@@ -936,7 +936,7 @@ Very High & Transactional sex (adjusted to correspond to female sex workers) & 0
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.9\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/available-surveys} 
+{\centering \includegraphics[width=0.95\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/available-surveys} 
 
 }
 
@@ -1203,7 +1203,7 @@ The results obtained are shown in Figure \ref{fig:age-disagg-fsw-line}.
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.9\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/age-disagg-fsw-line} 
+{\centering \includegraphics[width=0.95\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/age-disagg-fsw-line} 
 
 }
 
@@ -1227,7 +1227,7 @@ This approach has the advantage of considering all possible confidence values at
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.9\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/coverage} 
+{\centering \includegraphics[width=0.95\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/coverage} 
 
 }
 
@@ -1242,7 +1242,7 @@ This approach has the advantage of considering all possible confidence values at
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.9\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/3p1-continental-map} 
+{\centering \includegraphics[width=0.95\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/3p1-continental-map} 
 
 }
 
@@ -1251,7 +1251,7 @@ This approach has the advantage of considering all possible confidence values at
 
 \begin{figure}
 
-{\centering \includegraphics[width=0.9\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/3p1-within-between-country-variation} 
+{\centering \includegraphics[width=0.95\linewidth]{resources/multi-agyw/20230627-144735-3da88508/depends/3p1-within-between-country-variation} 
 
 }
 
@@ -1662,6 +1662,15 @@ The Naomi model has \(m = 24\) hyperparameters.
 
 \hypertarget{malawi-case-study}{%
 \section{Malawi case-study}\label{malawi-case-study}}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.95\linewidth]{resources/naomi-aghq/20230811-095752-5b8181d8/depends/figB} 
+
+}
+
+\caption{Naomi output.}\label{fig:figB}
+\end{figure}
 
 \hypertarget{nuts-convergence}{%
 \subsection{NUTS convergence}\label{nuts-convergence}}
