--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -12,6 +12,10 @@ documentclass: book
 bibliography: references.bib
 ---
 
+```{r}
+resource_version <- "20230811-095752-5b8181d8"
+```
+
 # Fast approximate Bayesian inference {#naomi-aghq}
 \adjustmtc
 \markboth{Fast approximate Bayesian inference}{}
@@ -260,6 +264,10 @@ The Naomi model has $m = 24$ hyperparameters.
 ### Principal components analysis
 
 ## Malawi case-study
+
+```{r figB, fig.cap="Naomi output."}
+knitr::include_graphics(paste0("resources/naomi-aghq/", resource_version, "/depends/figB.png"))
+```
 
 ### NUTS convergence
 
